@@ -8,15 +8,11 @@ import org.sparta.newsfeed.friend.dto.FriendResponseDto;
 import org.sparta.newsfeed.friend.entity.Friend;
 import org.sparta.newsfeed.friend.repository.FriendRepository;
 import org.sparta.newsfeed.user.entity.User;
-import org.sparta.newsfeed.user.repository.UserRepository;
 import org.sparta.newsfeed.user.service.UserService;
 import org.springframework.stereotype.Service;
 
-import java.nio.file.AccessDeniedException;
-import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 @RequiredArgsConstructor
 @Service
@@ -30,8 +26,7 @@ public class FriendService {
         User user = userService.findUserByEmail(authUser.getEmail());
         User requestUser = userService.findUserByEmail(friendDto.getRequestEmail());
 
-        log.info("userEmail",user.getEmail());
-        log.info("requestEmail",requestUser.getEmail());
+
 
         if (user == null || requestUser == null) {
             throw new IllegalArgumentException("유저를 찾지 못했습니다.");
@@ -39,12 +34,23 @@ public class FriendService {
         if (user.equals(requestUser)){
             throw new IllegalArgumentException("자신에게 친구 요청을 할 수 없습니다.");
         }
+        Friend isAlreadyFriends = friendRepository.findByBaseIdAndFriendId(user,requestUser).orElse(null);
+        if(isAlreadyFriends != null) {
+            if (isAlreadyFriends.isApplyYn()) {
+                throw new IllegalArgumentException("이미 친구입니다.");
+            } else if (isAlreadyFriends.isApplyYn() == false) {
+                throw new IllegalArgumentException("이미 친구 요청을 하였습니다.");
+            }
+        }
 
 
 
 
         Friend friend = new Friend(user, requestUser, false);
+        Friend reverseFriend = new Friend(requestUser, user, false);
         friendRepository.save(friend);
+        friendRepository.save(reverseFriend);
+
     }
 
     public void cancelRequestFriends(AuthUser authUser, FriendDto friendDto) {
@@ -54,58 +60,59 @@ public class FriendService {
         if (user == null || requestUser == null) {
             throw new IllegalArgumentException("유저를 찾지 못했습니다.");
         }
+
         Friend friend = friendRepository.findByBaseIdAndFriendId(user, requestUser).orElseThrow
+                (() -> new RuntimeException("친구요청을 찾지 못했습니다."));
+        Friend reversefriend = friendRepository.findByBaseIdAndFriendId(requestUser, user).orElseThrow
                 (() -> new RuntimeException("친구요청을 찾지 못했습니다."));
 
         friendRepository.delete(friend);
+        friendRepository.delete(reversefriend);
     }
 
-    public void deleteFriends(AuthUser authUser, FriendDto friendDtol) {
+    public void deleteFriends(AuthUser authUser, FriendDto friendDto) {
         User user = userService.findUserByEmail(authUser.getEmail());
-        User requestUser = userService.findUserByEmail(friendDtol.getRequestEmail());
+        User requestUser = userService.findUserByEmail(friendDto.getRequestEmail());
 
         if (user == null || requestUser == null) {
             throw new IllegalArgumentException("유저를 찾지 못했습니다.");
         }
         Friend friend = friendRepository.findByBaseIdAndFriendId(user, requestUser).orElseThrow
-                (() -> new RuntimeException("친구가 아닙니다."));
+                (() -> new RuntimeException("친구가 아닙니다.213"));
 
         if (friend.isApplyYn()) {
             friendRepository.delete(friend);
-            Friend reverseFriend = friendRepository.findByBaseIdAndFriendId(user, requestUser).orElseThrow
-                    (() -> new RuntimeException("친구요청을 찾지 못했습니다."));
+            Friend reverseFriend = friendRepository.findByBaseIdAndFriendId(requestUser, user).orElseThrow
+                    (() -> new RuntimeException("친구가 아닙니다."));
             friendRepository.delete(reverseFriend);
         }
 
     }
+    public void deleteFriends(User user)
+    {
+         friendRepository.deleteByBaseIdOrFriendId(user,user);
+    }
 
     public List<FriendResponseDto> getFriends(AuthUser authUser) {
-        List<Friend> baseFriends = new ArrayList<>();
-        for (Friend friend : friendRepository.findAll()) {
-            if (authUser.getUserId().equals(friend.getBaseId().getUserId())) {
-                if (friend.isApplyYn()) {
-                    baseFriends.add(friend);
-                }
-            }
-        }
-        return baseFriends.stream().map(friend -> new FriendResponseDto(
-                friend.getFriendId().getName(), friend.getFriendId().getCreatedAt())).
-                collect(Collectors.toList());
+        List<Friend> baseFriends;
+        User user = userService.findUserByEmail(authUser.getEmail());
+        baseFriends = friendRepository.findByFriendIdAndApplyYnTrue(user);
+
+
+
+
+        return baseFriends.stream().map(friend1 -> new FriendResponseDto(
+                friend1.getBaseId().getName(), friend1.getBaseId().getCreatedAt())).toList();
     }
 
     public List<FriendResponseDto> getRequestFriends(AuthUser authUser) {
-        List<Friend> requestFriends = new ArrayList<>();
+        List<Friend> requestFriends;
+        User user = userService.findUserByEmail(authUser.getEmail());
+        requestFriends = friendRepository.findByFriendIdAndApplyYnFalse(user);
 
-        for (Friend friend : friendRepository.findAll()) {
-            if (authUser.getUserId().equals(friend.getBaseId().getUserId())) {
-                if (/*거짓*/!friend.isApplyYn())
-                    requestFriends.add(friend);
-            }
-        }
 
         return requestFriends.stream().map(friend -> new FriendResponseDto(
-                friend.getFriendId().getName(), friend.getFriendId().getCreatedAt())).
-                collect(Collectors.toList());
+                friend.getBaseId().getName(), friend.getBaseId().getCreatedAt())).toList();
     }
 
     public void acceptFriends(AuthUser authUser, FriendDto friendDto) {
@@ -115,12 +122,13 @@ public class FriendService {
         if (user == null || requestUser == null) {
             throw new IllegalArgumentException("유저를 찾지 못했습니다.");
         }
-        Friend friend = friendRepository.findByBaseIdAndFriendId(user, requestUser).orElseThrow
+
+        Friend friend = friendRepository.findByBaseIdAndFriendId(requestUser,user).orElseThrow
                 (() -> new RuntimeException("친구요청을 찾지 못했습니다."));
-
+        Friend reverseFriend = friendRepository.findByBaseIdAndFriendId(user,requestUser).orElseThrow
+                (() -> new RuntimeException("친구요청을 찾지 못했습니다."));
         friend.setApplyYn(true);
-
-        Friend reverseFriend = new Friend(requestUser, user, true);
+        reverseFriend.setApplyYn(true);
 
         friendRepository.save(friend);
         friendRepository.save(reverseFriend);
@@ -137,9 +145,14 @@ public class FriendService {
 
         Friend friend = friendRepository.findByBaseIdAndFriendId(user, requestUser).orElseThrow
                 (() -> new RuntimeException("친구요청을 찾지 못했습니다."));
+        Friend reverseFriend = friendRepository.findByBaseIdAndFriendId(user,requestUser).orElseThrow
+                (() -> new RuntimeException("친구요청을 찾지 못했습니다."));
 
         friendRepository.delete(friend);
+        friendRepository.save(reverseFriend);
     }
+
+
 
 
 }
